# rusty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bootstrap.js  package-lock.json  skaffold-deployment.yaml  skaffold.yaml
db/: db.sqlite
migrations/20160720150332_create_tasks_table/: up.sql
migrations/2020-05-21-234323_users/: up.sql
src/: gmail.rs  main.rs  nlp.rs  schema.rs  user.rs
static/: email_sentiment_form.html.tera  gpl.html.tera  hello.html.tera  sentiment.html.tera
