[package]
name = "rusty"
version = "0.2.0"
authors = ["William Santasiero <william.santasiero@aceindustries.com>"]

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

google-gmail1 = "1.0.7+20171128"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
yup-oauth2 = "^ 1.0"

[dev-dependencies]
parking_lot = { version = "0.8", features = ["nightly"] }
rand = "0.6"

[dependencies.rocket_contrib]
version = "0.4.4"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
