[package]
name = "rusty"
version = "0.4.0"
authors = ["William Santasiero <william.santasiero@aceindustries.com>"]

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"
imap = "2.1.0"
native-tls = "0.2.4"
time = "0.2.16"
rusoto_core = "0.43.0"
rusoto_comprehend = "0.43.0"
tokio = "0.2.21"
tokio-core = "0.1"

[dev-dependencies]
parking_lot = { version = "0.8", features = ["nightly"] }
rand = "0.6"

[dependencies.rocket_contrib]
version = "0.4.4"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve", "json"]
